updated to final schema

--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,10 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenLocal()
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
