--- a/FontAwesomeComposeLib/build.gradle
+++ b/FontAwesomeComposeLib/build.gradle
@@ -1,7 +1,11 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'maven-publish'
 }
+
+group = 'com.github.fontawesomecompose'
+version = '1.0'
 
 android {
     compileSdkVersion 30
