--- a/FontAwesomeComposeLib/build.gradle
+++ b/FontAwesomeComposeLib/build.gradle
@@ -4,8 +4,31 @@ plugins {
     id 'maven-publish'
 }
 
-group = 'com.github.fontawesomecompose'
-version = '1.0'
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'com.guru.FontAwesomeCompose'
+                artifactId = 'final'
+                version = '1.0'
+            }
+            // Creates a Maven publication called “debug”.
+            debug(MavenPublication) {
+                // Applies the component for the debug build variant.
+                from components.debug
+
+                groupId = 'com.guru.FontAwesomeCompose'
+                artifactId = 'final-debug'
+                version = '1.0'
+            }
+        }
+    }
+}
 
 android {
     compileSdkVersion 30
