--- a/FontAwesomeComposeLib/build.gradle
+++ b/FontAwesomeComposeLib/build.gradle
@@ -13,18 +13,18 @@ afterEvaluate {
                 from components.release
 
                 // You can then customize attributes of the publication as shown below.
-                groupId = 'com.guru.FontAwesomeCompose'
+                groupId = 'com.guru.fontawesomecompose'
                 artifactId = 'final'
-                version = '1.0'
+                version = '1.1'
             }
             // Creates a Maven publication called “debug”.
             debug(MavenPublication) {
                 // Applies the component for the debug build variant.
                 from components.debug
 
-                groupId = 'com.guru.FontAwesomeCompose'
+                groupId = 'com.guru.fontawesomecompose'
                 artifactId = 'final-debug'
-                version = '1.0'
+                version = '1.1'
             }
         }
     }
@@ -34,7 +34,7 @@ android {
     compileSdkVersion 30
 
     defaultConfig {
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
